--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "redux": "^4.0.5"
   },
   "scripts": {
+    "predeploy": "npm run build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
